tests/compile_fail/display/wrong_unnamed_parameter.stderr
error[E0425]: cannot find value `_1` in this scope
 --> tests/compile_fail/display/wrong_unnamed_parameter.rs:2:19
  |
2 | #[display("Stuff({_1})")]
  |                   ^^ help: a local variable with a similar name exists: `_0`
